# Ros2FakeSensors

fake_sensors/: CMakeLists.txt  CMakeLists.txt.bac  package.xml
fake_sensors/install/: local_setup.sh  setup.sh
fake_sensors/install/fake_sensors/lib/fake_sensors/: fake_camera_pro  fake_lidar_pro
fake_sensors/install/fake_sensors/share/ament_index/resource_index/parent_prefix_path/: fake_sensors
fake_sensors/install/fake_sensors/share/fake_sensors/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
fake_sensors/log/: latest_build
fake_sensors/src/: camera_subscriber.cpp  fake_camera_pro.cpp  fake_lidar_pro.cpp  lidar.csv  lidar_subscriber.cpp
